--- a/src/Emby.Subtitle.Subf2m/Emby.Subtitle.Subf2m.csproj
+++ b/src/Emby.Subtitle.Subf2m/Emby.Subtitle.Subf2m.csproj
@@ -2,22 +2,25 @@
 
   <PropertyGroup>
     <TargetFramework>netstandard2.1</TargetFramework>
-    <Version>2.1.0</Version>
+    <Version>0.0.1</Version>
     <Authors>nRafinia</Authors>
-    <PackageProjectUrl>https://github.com/nRafinia/Emby.Subtitle.Subscene</PackageProjectUrl>
+    <PackageProjectUrl>https://github.com/nRafinia/Emby.Subtitle.Subf2m</PackageProjectUrl>
     <PackageLicenseExpression>MIT</PackageLicenseExpression>
+    <AssemblyName>Emby.Subtitle.Subf2m</AssemblyName>
+    <RootNamespace>Emby.Subtitle.Subf2m</RootNamespace>
   </PropertyGroup>
 
   <ItemGroup>
-    <None Remove="thumb.gif" />
+    <None Remove="thumb.png" />
   </ItemGroup>
 
   <ItemGroup>
-    <EmbeddedResource Include="thumb.gif" />
+    <EmbeddedResource Include="thumb.png" />
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="MediaBrowser.Server.Core" Version="4.5.0.28" />
+    <PackageReference Include="newtonsoft.json" Version="13.0.1" Condition="$(Configuration) == 'Debug'" />
     <PackageReference Include="System.Memory" Version="4.5.4" />
   </ItemGroup>
 
