--- a/src/Emby.Subtitle.Subf2m/Emby.Subtitle.Subf2m.csproj
+++ b/src/Emby.Subtitle.Subf2m/Emby.Subtitle.Subf2m.csproj
@@ -19,7 +19,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="MediaBrowser.Server.Core" Version="4.5.0.28" />
+    <PackageReference Include="MediaBrowser.Server.Core" Version="4.6.0.35-beta" />
     <PackageReference Include="newtonsoft.json" Version="13.0.1" Condition="$(Configuration) == 'Debug'" />
     <PackageReference Include="System.Memory" Version="4.5.4" />
   </ItemGroup>
